# user-management

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  users.py
app/configs/: config.py  config_dev.yml
app/core/: auth.py  db.py  sns_sender.py
app/crud/: crud_base.py  crud_user.py
app/enums/: login_type.py
app/exceptions/: duplication_error.py  not_found_error.py  unauthorized_error.py
app/models/: base.py  user.py
app/schemas/: base.py  except_message.py  healthcheck.py  login_tokens.py  token_data.py  user.py
app/services/: user_service.py
app/tests/api/v1/: test_v1.py
app/tests/api/v1/user/: test_user.py
app/tests/core/: faker_provider.py
app/tests/crud/: test_user.py
app/tests/services/: test_user_service.py
migrations/: env.py
migrations/versions/: 64db3ddaf49e_add_columns.py  be0107f17bb3_create_users_table.py  cf00f84268e6_drop_login_type_column.py
